[gd_scene load_steps=3 format=3 uid="uid://b678n5udjckfe"]

[ext_resource type="Script" path="res://node/menu/menu_toggle/menu_toggle.gd" id="2_1jsa8"]
[ext_resource type="PackedScene" uid="uid://b4b36g3uhwemg" path="res://component/audio/tree_audio/button_audio/button_audio.tscn" id="3_bky3g"]

[node name="MenuToggle" type="MarginContainer"]
custom_minimum_size = Vector2(650, 0)
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("2_1jsa8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="LabelMarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="LabelHBoxContainer" type="HBoxContainer" parent="HBoxContainer/LabelMarginContainer"]
layout_mode = 2

[node name="LabelLabel" type="Label" parent="HBoxContainer/LabelMarginContainer/LabelHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToggleMarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToggleVBoxContainer" type="HBoxContainer" parent="HBoxContainer/ToggleMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="ToggleButton" type="Button" parent="HBoxContainer/ToggleMarginContainer/ToggleVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath(".")
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "              "

[node name="ButtonAudio" parent="HBoxContainer/ToggleMarginContainer/ToggleVBoxContainer/ToggleButton" instance=ExtResource("3_bky3g")]
